2005-11-22  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtktextregion.c: remove include of gi18n.h.

2005-11-15  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagesmanager.c: fix off by one error
	in xdg directory lookup.

=== gtksourceview 1.5.1 ===

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.5.1, bump required gtk to 2.6.0.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/*: use gi18n-lib.h and remove gtksourceview-i18n.[ch].

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagesmanager.c: grab lang files from
	XDG_DATA_DIRS instead of the hardcoded install path. Bug #304147.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c: improve bracket matching: do the
	matching both if the bracket precedes the cursor and if follows it.
	If we have brackets on both sides, the match of the bracket following
	the cursor takes precedence. Bug #316020.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c (gtk_source_buffer_constructor):
	sync with the tag table if the caller specified one. Noticed by
	Joseph Turner, bug #321174.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceundomanager.c: improve action list freeing.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceiter.c (gtk_source_iter_forward_search):
	make limit an inclusive boundary. (#321300)

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/fortran.lang: add missing keywords.
	Patch by Jerry DeLisle. See bug #317898.

2005-10-18  Nate Nielsen  <nielsen@memberwebs.com>

	* gtksourceview/language-specs/javascript.lang: Moved 
	'const' into keywords. See bug #317978

=== gtksourceview 1.4.2 ===

2005-10-03  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.2.
